Refactor plugin to HeadingHandler and update commands
Renamed plugin classes and settings from MyPlugin to HeadingHandler for clarity. Updated command IDs and names to be more descriptive and context-aware, removed unused hotkeys, and improved command repeatability. Cleaned up Line.ts by removing unused currentLines tracking and streamlined line update logic. Updated manifest description for better context.

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Heading Handler",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Adds commands and functionality for using headings.",
+	"description": "Adds smart context-aware commands for changing the heading.",
 	"author": "goopi",
 	"authorUrl": "https://github.com/goopii",
 	"fundingUrl": "",
