--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "heading-handler",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "Smart heading commands that respect document hierarchy and indentation.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": [
+		"obsidian",
+		"plugin",
+		"heading",
+		"markdown",
+		"hierarchy"
+	],
+	"author": "Malte Henriksson",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
