Fix minimum heading calculation in Line class
Updated getMinimumHeading to handle cases where the indent matches the parent's stagedUpdate indent, ensuring correct minimum heading calculation. Also refactored demoteHeading logic for clarity and correctness.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "heading-handler",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"description": "Smart heading commands that respect document hierarchy and indentation.",
 	"main": "main.js",
 	"scripts": {
@@ -12,8 +12,7 @@
 		"obsidian",
 		"plugin",
 		"heading",
-		"markdown",
-		"hierarchy"
+		"markdown"
 	],
 	"author": "Malte Henriksson",
 	"license": "MIT",
